fix: goal item cancel button alignment

--- a/client/source/components/goal-item/goal-item.module.css
+++ b/client/source/components/goal-item/goal-item.module.css
@@ -84,9 +84,13 @@
 }
 
 .cancelBtn {
+  align-self: end;
   border: none;
   background: transparent;
-  grid-area: 1 / 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  grid-column: 3;
+  justify-self: end;
 }
 
 .goalIcon {
@@ -105,7 +109,6 @@
 
 .instruction {
   align-self: start;
-  margin-block-start: -0.15lh;
   font: var(--small-regular);
   grid-area: 2 / 2;
 }
